--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>sax</artifactId>
-    <version>0.5.8</version>
+    <version>0.6.1-SNAPSHOT</version>
     <name>sax</name>
     <description>WebJar for sax</description>
     <url>http://webjars.org</url>
@@ -28,7 +28,7 @@
         <url>http://github.com/webjars/sax</url>
         <connection>scm:git:https://github.com/webjars/sax.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/sax.git</developerConnection>
-        <tag>sax-0.5.8</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <developers>
