--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,25 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>sax</artifactId>
-    <version>0.6.1-SNAPSHOT</version>
+    <version>0.6.0-1-SNAPSHOT</version>
     <name>sax</name>
     <description>WebJar for sax</description>
     <url>http://webjars.org</url>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <upstreamVersion>0.6.0</upstreamVersion>
+        <upstream.url>https://github.com/isaacs/sax-js</upstream.url>
+        <extractDir>${project.build.directory}/sax-js-${upstreamVersion}</extractDir>
+        <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${upstreamVersion}</destDir>
+        <requirejs>
+            {
+                "paths": {
+                    "sax": "lib/sax"
+                }
+            }
+        </requirejs>
+    </properties>
 
     <licenses>
         <license>
@@ -37,14 +52,6 @@
             <name>Christopher Hunt</name>
         </developer>
     </developers>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <upstreamVersion>0.5.8</upstreamVersion>
-        <upstream.url>https://github.com/isaacs/sax-js</upstream.url>
-        <extractDir>${project.build.directory}/sax-js-${upstreamVersion}</extractDir>
-        <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${upstreamVersion}</destDir>
-    </properties>
 
     <build>
         <plugins>
